--- a/presentation/src/main/res/layout/category_item.xml
+++ b/presentation/src/main/res/layout/category_item.xml
@@ -21,16 +21,17 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="15dp"
         android:clickable="true"
-        android:focusable="true">
+        android:focusable="true"
+        android:onClick="@{() -> selector.selectCategory(item)}">
 
         <TextView
             android:id="@+id/text_view_category_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="7dp"
+            android:layout_marginBottom="10dp"
             android:text="@{item.categoryName}"
             android:textColor="#000000"
             android:textSize="12dp"
