--- a/presentation/src/main/res/xml/join_motion.xml
+++ b/presentation/src/main/res/xml/join_motion.xml
@@ -19,14 +19,13 @@
             android:id="@+id/content_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:focusable="true"/>
+            android:focusable="true" />
         <Constraint
-            android:id="@+id/content_holder"
+            android:id="@+id/category_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:alpha="0" />
+            android:alpha="0"
+            android:visibility="gone" />
     </ConstraintSet>
     <ConstraintSet android:id="@+id/end">
         <Constraint
@@ -34,14 +33,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0"
-            android:visibility="gone"
-            android:layout_marginTop="40dp"
-            android:focusable="true"/>
+            android:focusable="true"
+            android:visibility="gone" />
         <Constraint
-            android:id="@+id/content_holder"
+            android:id="@+id/category_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:alpha="1" />
+            android:visibility="visible" />
     </ConstraintSet>
 </MotionScene>
