--- a/presentation/src/main/res/layout/activity_join.xml
+++ b/presentation/src/main/res/layout/activity_join.xml
@@ -78,6 +78,27 @@
                     app:on_change="@{viewModel.onEditTextChanged}" />
 
                 <EditText
+                    android:id="@+id/edit_text_nickname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/login_edit_text_background"
+                    android:enabled="@{viewModel.editTextEnabled}"
+                    android:hint="닉네임"
+                    android:imeOptions="actionNext"
+                    android:paddingStart="20dp"
+                    android:paddingTop="14dp"
+                    android:paddingEnd="20dp"
+                    android:paddingBottom="14dp"
+                    android:singleLine="true"
+                    android:text="@={viewModel.nickname}"
+                    android:textSize="14dp"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
+                    app:on_change="@{viewModel.onEditTextChanged}" />
+
+                <EditText
                     android:id="@+id/edit_text_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -96,7 +117,7 @@
                     android:singleLine="true"
                     android:text="@={viewModel.email}"
                     android:textSize="14dp"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_text_nickname"
                     app:on_change="@{viewModel.onEditTextChanged}" />
 
                 <EditText
