--- a/presentation/src/main/res/layout/activity_login.xml
+++ b/presentation/src/main/res/layout/activity_login.xml
@@ -42,8 +42,10 @@
             android:paddingEnd="20dp"
             android:paddingBottom="14dp"
             android:singleLine="true"
+            android:text="@={viewModel.id}"
             android:textSize="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
+            app:on_change="@{viewModel.onEditTextChanged}" />
 
         <EditText
             android:id="@+id/edit_text_password"
@@ -60,8 +62,10 @@
             android:paddingEnd="20dp"
             android:paddingBottom="14dp"
             android:singleLine="true"
+            android:text="@={viewModel.password}"
             android:textSize="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_id" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
+            app:on_change="@{viewModel.onEditTextChanged}" />
 
         <Button
             android:id="@+id/button_login"
@@ -70,6 +74,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="43dp"
             android:layout_marginEnd="20dp"
+            android:enabled="@{viewModel.buttonEnabled}"
+            android:onClick="@{() -> viewModel.login()}"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
             android:text="로그인"
