--- a/presentation/src/main/res/layout/activity_join.xml
+++ b/presentation/src/main/res/layout/activity_join.xml
@@ -63,6 +63,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginEnd="20dp"
+                    android:autofillHints=""
                     android:background="@drawable/login_edit_text_background"
                     android:enabled="@{viewModel.editTextEnabled}"
                     android:hint="아이디"
@@ -75,8 +76,7 @@
                     android:text="@={viewModel.id}"
                     android:textSize="14dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:on_change="@{viewModel.onEditTextChanged}"
-                    android:autofillHints="" />
+                    app:on_change="@{viewModel::onEditTextChanged}" />
 
                 <EditText
                     android:id="@+id/edit_text_nickname"
@@ -97,7 +97,7 @@
                     android:text="@={viewModel.nickname}"
                     android:textSize="14dp"
                     app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
-                    app:on_change="@{viewModel.onEditTextChanged}" />
+                    app:on_change="@{viewModel::onEditTextChanged}" />
 
                 <EditText
                     android:id="@+id/edit_text_email"
@@ -119,7 +119,7 @@
                     android:text="@={viewModel.email}"
                     android:textSize="14dp"
                     app:layout_constraintTop_toBottomOf="@+id/edit_text_nickname"
-                    app:on_change="@{viewModel.onEditTextChanged}" />
+                    app:on_change="@{viewModel::onEditTextChanged}" />
 
                 <EditText
                     android:id="@+id/edit_text_password"
