--- a/presentation/src/main/res/layout/activity_login.xml
+++ b/presentation/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
             android:text="@={viewModel.id}"
             android:textSize="14dp"
             app:layout_constraintTop_toBottomOf="@+id/text_view_title"
-            app:on_change="@{viewModel.onEditTextChanged}" />
+            app:on_change="@{viewModel::onEditTextChanged}" />
 
         <EditText
             android:id="@+id/edit_text_password"
@@ -65,7 +65,7 @@
             android:text="@={viewModel.password}"
             android:textSize="14dp"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
-            app:on_change="@{viewModel.onEditTextChanged}" />
+            app:on_change="@{viewModel::onEditTextChanged}" />
 
         <Button
             android:id="@+id/button_login"
