--- a/presentation/src/main/res/layout/fragment_main_menu.xml
+++ b/presentation/src/main/res/layout/fragment_main_menu.xml
@@ -11,64 +11,72 @@
     </data>
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content_holder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@drawable/main_menu_background"
+        android:elevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/image_view_profile"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="17dp"
+            android:background="@drawable/profile_image_background"
+            android:src="@drawable/ic_person"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_view_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="@{viewModel.userData.member_id}"
+            android:textColor="#000000"
+            android:textSize="22dp"
+            app:layout_constraintStart_toEndOf="@+id/image_view_profile"
+            app:layout_constraintTop_toTopOf="@+id/image_view_profile"
+            tools:text="TEST" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="@{viewModel.userData.email}"
+            android:textSize="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/image_view_profile"
+            app:layout_constraintStart_toEndOf="@+id/image_view_profile"
+            tools:text="test@test.com" />
+
+        <View
+            android:id="@+id/view_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="12dp"
+            android:background="#bbbbbb"
+            app:layout_constraintTop_toBottomOf="@+id/image_view_profile" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/content_holder"
+            android:id="@+id/menu_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@drawable/main_menu_background"
-            android:elevation="5dp"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toBottomOf="@+id/view_divider">
 
-            <ImageView
-                android:id="@+id/image_view_profile"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="17dp"
-                android:background="@drawable/profile_image_background"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/text_view_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:text="@{viewModel.test}"
-                android:textColor="#000000"
-                android:textSize="22dp"
-                app:layout_constraintStart_toEndOf="@+id/image_view_profile"
-                app:layout_constraintTop_toTopOf="@+id/image_view_profile"
-                tools:text="TEST" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:textSize="12dp"
-                app:layout_constraintBottom_toBottomOf="@+id/image_view_profile"
-                app:layout_constraintStart_toEndOf="@+id/image_view_profile"
-                tools:text="test@test.com" />
-
-            <View
-                android:id="@+id/view_divider"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_menu"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="12dp"
-                android:background="#bbbbbb"
-                app:layout_constraintTop_toBottomOf="@+id/image_view_profile" />
-
-            <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-            <!--            android:id="@+id/menu_holder"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:layout_marginTop="2dp"-->
-            <!--            android:paddingStart="20dp"-->
-            <!--            android:paddingEnd="20dp"-->
-            <!--            app:layout_constraintTop_toBottomOf="@+id/view_divider">-->
-
-            <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+                android:layout_height="match_parent"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/main_menu_item" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
