--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -2,15 +2,26 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.workto_android.ui.main.MainViewModel" />
     </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/holder_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="?attr/actionBarSize">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
@@ -25,11 +36,61 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_search"
             android:backgroundTint="#595ffe"
-            app:tint="@android:color/white"
-            app:layout_anchor="@id/bottom_app_bar" />
+            android:src="@drawable/ic_search"
+            app:layout_anchor="@id/bottom_app_bar"
+            app:tint="@android:color/white" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/search_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_holder_background"
+            android:clickable="true"
+            android:elevation="15dp"
+            android:focusable="true"
+            app:behavior_hideable="true"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+            app:layout_constraintTop_toBottomOf="parent">
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/header"
+                android:layout_width="60dp"
+                android:layout_height="7dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#d5d5d5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/edit_text_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginEnd="15dp"
+                android:hint="검색어를 입력해주세요"
+                android:paddingEnd="20dp"
+                android:textColor="#afafaf"
+                android:textSize="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/header" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_close"
+                app:layout_constraintBottom_toBottomOf="@+id/edit_text_search"
+                app:layout_constraintEnd_toEndOf="@+id/edit_text_search"
+                app:layout_constraintTop_toTopOf="@+id/edit_text_search" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 </layout>
