--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -21,6 +21,10 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="?attr/actionBarSize">
 
+            <FrameLayout
+                android:id="@+id/fragment_holder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.bottomappbar.BottomAppBar
@@ -182,8 +186,8 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="15dp"
                     android:onClick="@{() -> viewModel.executeSearch()}"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
+                    android:paddingTop="14dp"
+                    android:paddingBottom="14dp"
                     android:text="선택한 조건으로 검색"
                     android:textColor="#ffffff"
                     app:layout_constraintBottom_toBottomOf="parent" />
