--- a/presentation/src/main/res/layout/fragment_post_list.xml
+++ b/presentation/src/main/res/layout/fragment_post_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -15,6 +16,13 @@
         android:layout_height="match_parent"
         android:background="#f2f5f9">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_post"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:post_item="@{viewModel.postList}"
+            tools:listitem="@layout/post_item" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
