--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -185,7 +185,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="15dp"
-                    android:onClick="@{() -> viewModel.executeSearch()}"
+                    android:onClick="@{() -> viewModel.executeSearch(1)}"
                     android:paddingTop="14dp"
                     android:paddingBottom="14dp"
                     android:text="선택한 조건으로 검색"
