--- a/presentation/src/main/res/layout/post_item.xml
+++ b/presentation/src/main/res/layout/post_item.xml
@@ -18,8 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="5dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="3dp">
 
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:focusable="true"
+            android:background="@drawable/main_menu_item_background"
             android:onClick="@{() -> viewModel.navigateToPostDetail(item.post_id)}"
             android:paddingStart="13dp"
             android:paddingEnd="13dp">
@@ -40,7 +42,7 @@
                 android:singleLine="true"
                 android:text="@{item.title}"
                 android:textColor="#707070"
-                android:textSize="22dp"
+                android:textSize="18dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -50,11 +52,10 @@
                 android:id="@+id/text_view_date_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="26dp"
                 android:text="등록일"
                 android:textColor="#707070"
                 android:textSize="10dp"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_title" />
 
@@ -62,12 +63,12 @@
                 android:id="@+id/text_view_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
                 android:singleLine="true"
-                android:text="@{item.create_data}"
+                android:text="@{item.create_date}"
                 android:textColor="#000000"
                 android:textSize="12dp"
-                android:layout_marginTop="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_date_title"
@@ -78,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="26dp"
                 android:text="인원"
                 android:textColor="#707070"
                 android:textSize="10dp"
@@ -89,10 +90,10 @@
                 android:id="@+id/text_view_count"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
                 android:singleLine="true"
                 android:text="@{item.count}"
-                android:layout_marginTop="3dp"
                 android:textColor="#000000"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
