--- a/presentation/src/main/res/layout/activity_post_detail.xml
+++ b/presentation/src/main/res/layout/activity_post_detail.xml
@@ -51,7 +51,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="100dp">
 
                 <TextView
                     android:id="@+id/text_view_title"
@@ -62,8 +63,7 @@
                     android:layout_marginEnd="20dp"
                     android:text="@{viewModel.postDetail.post.title}"
                     android:textColor="#000000"
-                    android:textSize="18dp"
-                    android:textStyle="bold"
+                    android:textSize="20dp"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="TEST" />
 
@@ -75,10 +75,71 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     android:text="@{viewModel.postDetail.post.content}"
+                    android:textSize="18dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_view_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_holder_background"
+            app:behavior_hideable="false"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+            <TextView
+                android:id="@+id/text_view_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="15dp"
+                android:text="@{viewModel.postDetail.post.create_date}"
+                android:textColor="#000000"
+                android:textSize="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="TEST" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_team"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="14dp"
+                android:backgroundTint="#F4E9E9"
+                android:onClick="@{() -> viewModel.navigateToTeam(viewModel.postDetail.post.group_id)}"
+                android:paddingStart="50dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="50dp"
+                android:paddingBottom="12dp"
+                android:text="팀 정보"
+                android:textColor="#000000"
+                app:cornerRadius="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_date" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="13dp"
+                android:layout_marginBottom="14dp"
+                android:paddingStart="65dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="65dp"
+                android:paddingBottom="12dp"
+                android:text="지원하기"
+                app:cornerRadius="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_date" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
