--- a/presentation/src/main/res/layout/post_item.xml
+++ b/presentation/src/main/res/layout/post_item.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="item"
-            type="com.example.model.Post" />
+            type="com.example.model.PostData" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -27,10 +27,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/main_menu_item_background"
             android:clickable="true"
             android:focusable="true"
-            android:background="@drawable/main_menu_item_background"
-            android:onClick="@{() -> viewModel.navigateToPostDetail(item.post_id)}"
+            android:onClick="@{() -> viewModel.navigateToPostDetail(item.info.post_id)}"
             android:paddingStart="13dp"
             android:paddingEnd="13dp">
 
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                 android:singleLine="true"
-                android:text="@{item.title}"
+                android:text="@{item.info.title}"
                 android:textColor="#707070"
                 android:textSize="18dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
                 android:singleLine="true"
-                android:text="@{item.create_date}"
+                android:text="@{item.info.create_date}"
                 android:textColor="#000000"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -93,7 +93,7 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
                 android:singleLine="true"
-                android:text="@{item.count}"
+                android:text="@{item.info.count}"
                 android:textColor="#000000"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
