--- a/presentation/src/main/res/layout/fragment_post_list.xml
+++ b/presentation/src/main/res/layout/fragment_post_list.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:post_item="@{viewModel.postListList}"
+            app:post_item="@{viewModel.postList}"
             tools:listitem="@layout/post_item" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
