--- a/presentation/src/main/res/layout/team_member_item.xml
+++ b/presentation/src/main/res/layout/team_member_item.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="item"
+            type="com.example.model.TeamMember" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +34,7 @@
             android:layout_marginTop="5dp"
             android:textColor="#000000"
             android:textSize="10dp"
+            android:text="@{item.member_id}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image_view_profile"
